# ito-but-free

./: .gitignore  .rewrite-replacements.txt  ACCESSIBILITY_GUIDE.md  CLAUDE.md  GROQBARA_FIX_PLAN.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  overlay.html  overlay.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_type.rs  fn_key_listener.rs  lib.rs  main.rs  recorder.rs  settings.rs  transcribe.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src/components/: LogsPanel.css  LogsPanel.tsx  RecordingOverlay.css  RecordingOverlay.tsx  Sidebar.css  Sidebar.tsx  TitleBar.css  TitleBar.tsx  Workspace.css  Workspace.tsx
